--- a/tif_frondend/src/app/mensaje/mensaje-page/mensaje-page.component.html
+++ b/tif_frondend/src/app/mensaje/mensaje-page/mensaje-page.component.html
@@ -1,6 +1,10 @@
-<p>mensaje-page works!</p>
+<div class="borde-2025">
+  <H1>GALLETA DE LA FORTUNA</H1>
+  <img src="https://www.horoscopo.com/img/genie/juego-galleta-china-de-la-fortuna-galleta-2.gif" alt="Galleta China de la Fortuna">
+
 <div *ngIf="mensajes.length > 0">
-  <h3>Mensaje aleatorio:</h3>
-  <p>{{ mensajes[randomIndex]?.mensaje }}</p>
+  
+  <h2>{{ mensajes[randomIndex]?.mensaje }}</h2>
 </div>
-<button type="button" routerLink="/">Volver al inicio</button>
+<button class="boton-cool" type="button" routerLink="/">Volver al inicio</button>
+</div>
