--- a/tif_frondend/src/app/menu/menu-page/menu-page.component.html
+++ b/tif_frondend/src/app/menu/menu-page/menu-page.component.html
@@ -1,2 +1,14 @@
-<p>Galleta china de la fortuna</p>
-<button type="button" routerLink="/mensaje">Abre galleta</button>
+<div>
+    <H1>GALLETA DE LA FORTUNA</H1>
+    <p>
+        ¿Necesitas de un sabio consejo o de un levantón? <br>¡Obtén la sabiduría de la galleta china de la fortuna, eso sí, ¡sin las
+        calorías!
+
+    </p>
+    <div class="borde-2025">
+        <img src="https://www.horoscopo.com/img/genie/juego-galleta-china-de-la-fortuna-galleta-1.gif" alt="" srcset="">
+        <br>
+        <button class="boton-cool" type="button" routerLink="/mensaje">Abre galleta</button>
+
+    </div>
+</div>
